# Course_work_4_SQL

./: README.md  database.py  employer.json  main.py  pyproject.toml
